--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,23 @@ version: "3"
 services:
   fastapi:
     build: .
-    command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
+    command: uvicorn fastapi.app:app --reload --host 0.0.0.0 --port 8000
     volumes:
       - .:/code
     ports:
       - "8000:8000"
     depends_on:
       - redis
+      - celery
+
   celery:
     build: .
-    command: celery -A celery_config.celery_app worker --loglevel=info
+    command: celery -A src.config.celery_config.celery_app worker --loglevel=info
     volumes:
       - .:/code
     depends_on:
       - redis
+
   redis:
     image: "redis:alpine"
     ports:
